# pivelocimetry

./: .application.cc.swp  .application.cpp.swp  .application.h.swp  .default.cfg.swp  .gitignore  .image.cc.swp  .image.h.swp  .main.cc.swp  .main.cpp.swp  .pivoptions.cc.swp  .pivoptions.h.swp  .swp  CFG  CMakeLists.txt  PeaksKK.cpp  README.md  advance_in_call.txt  afterMessing.txt  application.cc  application.cpp  application.glade  application.glade~  application.h  argparser.cpp  beforeMessing.txt  cliparse  default.cfg  demo.json  ffff  gtkmain.cpp  gtkmm_glad  hell_yeah.txt  image.cc  image.h  lena.tiff  main  main.cc  main.cpp  output_from_cli.txt  pivoptions.h  (+5 more)
config/: default.cfg  default.yaml  yam.cpp
gui/: a_gui.glade  a_gui.glade~  basic.glade  vec_viewer.glade  vec_viewer.glade~
img/: 1.tiff  lena_color.tiff
include/: Disp.hpp  DoPiv.hpp  DoPost.hpp  Grid.hpp  GtkImage.hpp  IntMap.hpp  IntMappable.hpp  MyAreaD.h  MyAreaD.hpp  Peak.hpp  PivOptions.hpp  PivPoint.hpp  PivVector.hpp  PivViewGtk.hpp  SubPix.hpp  XCorr2.hpp  cli_args.hpp  find_peaks.hpp  utils.hpp
lib/: .clap.h.swp  .clap_tests.cpp.swp  Clap.cpp  Clap.hpp  Mat2.hpp  alias.hpp  bpu.hpp  clap.h  clap_test  clap_tests.cpp  find_peaks.hpp
prof/: object_sizes  sizes.cpp  timer.sh
src/: .CMakeLists.txt.swp  .PivView.cpp.swo  .bppiv.h.swp  .bppiv_clap.h.swp  .ccf.h.swp  .config_file.h.swp  .do_piv.h.swp  .grid.h.swp  .int_map.cpp.swp  .int_map.h.swp  .main.cpp.swp  .peak.h.swp  .piv_point.h.swp  .pivoptions.cpp.swp  .pivoptions.h.swp  .subpix.h.swp  .xcorr2.h.swp  CMakeCache.txt  CMakeLists.txt  Ccf.cpp  Ccf.hpp  ConfigFile.hpp  Disp.cpp  Disp.hpp  DoPiv.cpp  DoPiv.hpp  DoPost.cpp  DoPost.hpp  Grid.cpp  Grid.hpp  GtkImage.cpp  GtkImage.hpp  IntMap.cpp  IntMap.hpp  IntMappable.hpp  Makefile  MyAreaD.cpp  MyAreaD.h  OCVIClass  OcvImage.cpp  (+53 more)
src/unused/: OcvImage.cpp  PivView.cpp  base.cpp  myarea.cpp  myarea.h
tests/: .Mat2.h.swp  .ccf_tests.cpp.swp  .grid_tests.cpp.swp  .subpixel_tests.cpp.swp  16x16_512x512_8_8_overlap.txt  Mat2.h  add_pairs_tests  add_pairs_tests.cpp  bpu_collect_tests  bpu_collect_tests.cpp  bpu_mean_tests.cpp  bpu_tests  bpu_tests.cpp  cast_round_if_integral_tests  cast_round_if_integral_tests.cpp  catch.hpp  ccf_tests  ccf_tests.cpp  collect_unique_tests  collect_unique_tests.cpp  disp_tests  disp_tests.cpp  find_ccf_peaks_tests  find_ccf_peaks_tests.cpp  for_each_tests  for_each_tests.cpp  grid_test  grid_tests.cpp  index_to_coords_tests.cpp  int_map_tests.cpp  intmap_tests  mat2.h  mat2_tests  mat2_tests.cpp  mat_main.cpp  mat_profile  matrix_profile.cpp  mean_pair_tests  mean_pair_tests.cpp  mean_tests  (+10 more)
